# otf-scheduler

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
rq/: rq-poc.py  task.py
src/otfscheduler/: client.py  job.py  logging.py  server.py
src/otfscheduler/cli/: startup.py
test/cfg/: scheduler.client.json  scheduler.server.json
test/cfg/jobs/: job1.json  job2-after-new-day-today.json  job2-before-new-day-today.json  job3-every-minute.json  job4-every-minute-3am-4am-and-3pm-5pm.json
tests/: test_job.py
